--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
+    "core-js": "^3.6.5",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "regenerator-runtime": "^0.13.5"
   }
 }
