--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-js-pagination": "^3.0.3",
     "react-redux": "^7.2.0",
     "regenerator-runtime": "^0.13.5"
   }
