--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^16.13.1",
     "react-js-pagination": "^3.0.3",
     "react-redux": "^7.2.0",
-    "regenerator-runtime": "^0.13.5"
+    "regenerator-runtime": "^0.13.5",
+    "use-persisted-state": "^0.3.0"
   }
 }
