--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
     "@babel/preset-env": "^7.10.3",
     "@babel/preset-react": "^7.10.1",
     "babel-loader": "^8.1.0",
+    "css-loader": "^3.6.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "redux-devtools": "^3.5.0",
+    "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "babel-plugin-react-css-modules": "^5.2.6",
+    "classnames": "^2.2.6",
     "core-js": "^3.6.5",
     "lodash": "^4.17.15",
     "react": "^16.13.1",
@@ -31,6 +35,7 @@
     "react-js-pagination": "^3.0.3",
     "react-redux": "^7.2.0",
     "regenerator-runtime": "^0.13.5",
+    "store": "^2.0.12",
     "use-persisted-state": "^0.3.0"
   }
 }
