--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "css-loader": "^3.6.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
+    "prettier": "2.0.5",
     "redux-devtools": "^3.5.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
